added auth for surveys

--- a/src/app/pages/edit-survey/edit-survey.component.css
+++ b/src/app/pages/edit-survey/edit-survey.component.css
@@ -23,7 +23,7 @@ label {
     padding: 30px;
 }
 
-.curvey_button{
+.survey_button{
     color: #fff;
     background-color: #6494a3;
     border-color: #6494a3;
