--- a/src/app/pages/edit-survey/edit-survey.component.html
+++ b/src/app/pages/edit-survey/edit-survey.component.html
@@ -5,11 +5,11 @@
         <input required type="text" class="form-control" id="title" name="title" [ngModel]="survey.title">
         <label for="descriptionLable">Description</label>
         <input required type="text" class="form-control" id="description" name="description" [ngModel]="survey.description">
-        
+
         <div class="question_label">
         <label for="questions">Questions</label>
         </div>
-        <div *ngFor='let question of survey.questions; index as i' class="form-group"> 
+        <div *ngFor='let question of survey.questions; index as i' class="form-group">
             <label for="labelLable_{{i}}">Label</label>
             <input required type="text" class="form-control" id="label_{{i}}" name="label_{{i}}" [ngModel]="question.label">
             <label for="styleLable_{{i}}">Style</label>
@@ -21,8 +21,8 @@
         </div>
 
         <div>
-          <a href="javascript:void(0);" (click)="addField()" class="curvey_button">Add Question</a>
-          <button type="submit" class="curvey_button btn_space">Submit</button>
+          <a href="javascript:void(0);" (click)="addField()" class="survey_button">Add Question</a>
+          <button type="submit" class="survey_button btn_space">Submit</button>
       </div>
     </form>
   </div>
