--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,10 +1,35 @@
 <div class="body-wrapper">
-
     <div class="center_content">
         <h1>The answer to your questions!</h1>
-        <p style="margin-bottom: 50px;">Survey is a Angular based Web-Application developed us
+        <p style="margin-bottom: 50px;">Survey is a Angular based Web-Application developed by Me
             that allows anyone to create their own surveys and have controll over their answers. This powerful
             tool delivers a complete survey and user management system .</p>
-
-
+        <h2 style="margin-bottom: 30px;">Get to know Us</h2>
+        <div class="team_container center">
+            <img src="assets/prem.jpg" alt="Prem Patel" class="team_img">
+            <h4 class="team_title">Database Programmer </h4>
+            <p class="team_text">Prem Patel</p>
+        </div> <div class="team_container center">
+            <img src="assets/sahil.jpg" alt="Milan Khunt" class="team_img">
+            <h4 class="team_title">Database Programmer</h4>
+            <p class="team_text">Sahil Sutariya</p>
+        </div> <div class="team_container center">
+            <img src="assets/ohm.jpg" alt="Milan Khunt" class="team_img">
+            <h4 class="team_title">Frontend Developer</h4>
+            <p class="team_text">Ohm Patel</p>
+        </div> <div class="team_container center">
+            <img src="assets/dhurvi.jpg" alt="Milan Khunt" class="team_img">
+            <h4 class="team_title">Frontend Developer</h4>
+            <p class="team_text">Dhruvi Mandaviya</p>
+        </div> <div class="team_container center">
+            <img src="assets/Maharsh.jpg" alt="Milan Khunt" class="team_img">
+            <h4 class="team_title">Backend Developer</h4>
+            <p class="team_text">Maharsh Patel</p>
+        </div>
+        <div class="team_container center">
+            <img src="assets/milan.jpg" alt="Milan Khunt" class="team_img">
+            <h4 class="team_title">Backend Developer</h4>
+            <p class="team_text">Milankumar Khunt</p>
+        </div>
+    </div>
 </div>
