--- a/src/app/pages/survey/survey.component.css
+++ b/src/app/pages/survey/survey.component.css
@@ -1,5 +1,11 @@
-.card_survey {
-    width: 50%; 
+.card {
+    background-color: #ffffff;
+  border-radius: 9px;
+  border: none;
+
+  box-shadow: 0 7px 11px 0 #d8e0f2;
+}.card_survey {
+    width: 50%;
     margin: auto;
     margin-bottom: 30px;
 }
@@ -17,7 +23,7 @@
     margin-bottom: 30px;
 }
 
-.curvey_button{
+.survey_button{
     color: #fff;
     background-color: #6494a3;
     border-color: #6494a3;
