--- a/src/app/partials/footer/footer.component.html
+++ b/src/app/partials/footer/footer.component.html
@@ -1,6 +1,6 @@
 <!-- Bottom Nav -->
 <footer>
-  <nav class="curvey_footer">
+  <nav class="survey_footer">
     <h6 class="display-6 navbar-text">&copy; Copyright 2023. All Rights reserved.</h6>
   </nav>
 </footer>
