--- a/src/app/partials/header/header.component.html
+++ b/src/app/partials/header/header.component.html
@@ -4,7 +4,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-  <a class="navbar-brand" href="">Survey</a>
+  <a class="navbar-brand" href=""><img src='../../../assets/logo.jpg' height="40px" width="140px"></a>
   <!--Add Logo in future-->
 
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -17,8 +17,14 @@
       <li class="nav-item"><a class="nav-link" href="/home">Home </a></li>
       <li class="nav-item"><a class="nav-link" href="/survey" routerLinkActive="active"> Surveys </a></li>
       <li class="nav-item"><a class="nav-link" href="/survey-management" routerLinkActive="active"
-          > Surveys Management </a></li>
+          *ngIf="this.auth.loggedIn"> Surveys Management </a></li>
 
+      <li class="nav-item"><a class="nav-link btn-info" href="/login" *ngIf="!this.auth.loggedIn"><i
+            class="fas fa-lg fa-sign-in-alt"></i>Login </a></li>
+      <li class="nav-item"><a class="nav-link" href="/registration" *ngIf="!this.auth.loggedIn"> Signup </a></li>
+      <li class="nav-item"><a class="nav-link btn-danger" (click)="logout()" href="/home" *ngIf="this.auth.loggedIn"><i
+            class="fas fa-lg fa-sign-out-alt"></i>Logout</a>
+      </li>
     </ul>
   </div>
 
